Moved styles to base.css, removed images related to Chameleon

--- a/assets/404.css
+++ b/assets/404.css
@@ -14,11 +14,11 @@
 }
 
 .error-404__content--padding-top {
-  padding-top: var(--padding-top-mobile);
+  padding-top: var(--padding-top-mobile, 0);
 }
 
 .error-404__content--padding-bottom {
-  padding-bottom: var(--padding-bottom-mobile);
+  padding-bottom: var(--padding-bottom-mobile, 0);
 }
 
 .error-404__container {
@@ -133,10 +133,10 @@ div.error-404__container .error-404__description {
 
 @media (min-width: 992px) {
   .error-404__content--padding-top {
-    padding-top: var(--padding-top);
+    padding-top: var(--padding-top, 0);
   }
 
   .error-404__content--padding-bottom {
-    padding-bottom: var(--padding-bottom);
+    padding-bottom: var(--padding-bottom, 0);
   }
 }
