--- a/assets/articles.css
+++ b/assets/articles.css
@@ -12,12 +12,8 @@
   padding-top: var(--padding-top-mobile, 0);
 }
 
-.header-transparent ~ main .articles:first-child .articles__wrapper--padding-top {
-  padding-top: calc(var(--padding-top-mobile, 0px) + var(--header-height, 110px) - var(--top-bar-height, 0px));
-}
-
 .articles__wrapper--padding-bottom {
-  padding-bottom: var(--padding-bottom-mobile);
+  padding-bottom: var(--padding-bottom-mobile, 0);
 }
 
 .articles__list {
@@ -257,19 +253,17 @@
   }
 }
 
-@media (min-width: 1100px) {
+@media (min-width: 992px) {
   .articles__wrapper--padding-top {
     padding-top: var(--padding-top, 0);
   }
 
-  .header-transparent ~ main .articles:first-child .articles__wrapper--padding-top {
-    padding-top: calc(var(--padding-top, 0px) + var(--header-height, 110px) - var(--top-bar-height, 0px));
-  }
-
   .articles__wrapper--padding-bottom {
-    padding-bottom: var(--padding-bottom);
+    padding-bottom: var(--padding-bottom, 0);
   }
+}
 
+@media (min-width: 1100px) {
   .articles__tag {
     margin: 0 0 10px;
   }
