--- a/assets/base.css
+++ b/assets/base.css
@@ -167,6 +167,18 @@ body .stretch > section:first-child{
   padding-top: var(--header-height);
 }
 
+.header-transparent ~ #main > section:first-child [class^="padding-top"],
+.header-transparent ~ #main > section:first-child [class*="padding-top"] {
+  padding-top: calc(var(--padding-top-mobile, 0px) + var(--header-height, 110px) - var(--top-bar-height, 0px));
+}
+
+@media (min-width: 992px) {
+  .header-transparent ~ #main > section:first-child [class^="padding-top"],
+  .header-transparent ~ #main > section:first-child [class*="padding-top"] {
+    padding-top: calc(var(--padding-top, 0px) + var(--header-height, 110px) - var(--top-bar-height, 0px));
+  }
+}
+
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   font-family: var(--font-heading);
   font-weight: var(--font-weight-extrabold);
