--- a/assets/text.css
+++ b/assets/text.css
@@ -1,9 +1,9 @@
 .text__wrapper--padding-top {
-  padding-top: var(--padding-top-mobile);
+  padding-top: var(--padding-top-mobile, 0);
 }
 
 .text__wrapper--padding-bottom {
-  padding-bottom: var(--padding-bottom-mobile);
+  padding-bottom: var(--padding-bottom-mobile, 0);
 }
 
 .text__wrapper {
@@ -18,10 +18,10 @@
 
 @media (min-width: 992px) {
   .text__wrapper--padding-top {
-    padding-top: var(--padding-top);
+    padding-top: var(--padding-top, 0);
   }
 
   .text__wrapper--padding-bottom {
-    padding-bottom: var(--padding-bottom);
+    padding-bottom: var(--padding-bottom, 0);
   }
 }
