--- a/assets/account.css
+++ b/assets/account.css
@@ -319,12 +319,13 @@
   overflow-y: auto;
 }
 
-.account__agreement-closer {
+.account__agreement-closer.button {
   position: absolute;
   top: 0;
   right: 6px;
   width: 40px;
   height: 40px;
+  padding: 0;
   text-indent: -9999px;
   overflow: hidden;
   cursor: pointer;
@@ -336,15 +337,15 @@
   content: "";
   position: absolute;
   top: 50%;
-  left: 23%;
-  right: 23%;
-  transform: rotate(45deg);
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(45deg);
   height: 2px;
+  width: 20px;
   background: var(--color-accent);
 }
 
 .account__agreement-closer:after {
-  transform: rotate(-45deg);
+  transform: translate(-50%, -50%) rotate(-45deg);
 }
 
 .account__agreement-buttons {
