--- a/assets/base.css
+++ b/assets/base.css
@@ -414,5 +414,5 @@ img {
 
 .tippy-box *:not(label),
 .bq-modal *:not(label) {
-  border-radius: var(--border-radius-none) !important;
+  border-radius: var(--border-radius-rounded) !important;
 }
