--- a/sections/columns.liquid
+++ b/sections/columns.liquid
@@ -101,7 +101,7 @@
             {%- if title != blank or text != blank or button_label != blank -%}
               <div class="columns__text">
                 {%- if title != blank -%}
-                  <strong class="columns__title">{{- title -}}</strong>
+                  <strong class="columns__title h6">{{- title -}}</strong>
                 {%- endif -%}
 
                 {%- if text != blank -%}
