--- a/sections/list-collections.liquid
+++ b/sections/list-collections.liquid
@@ -228,7 +228,7 @@
       },
       {
         "type": "header",
-        "content": "Overlay"
+        "content": "Overlay settings"
       },
       {
         "type": "checkbox",
