--- a/sections/socials.liquid
+++ b/sections/socials.liquid
@@ -73,7 +73,7 @@
           {%- if full_width -%}
             <div class="socials__container container">
           {%- endif -%}
-              <h2 class="socials__title">{{- title -}}</h2>
+              <h2 class="socials__title h4">{{- title -}}</h2>
           {%- if full_width -%}
             </div>
           {%- endif -%}
