--- a/sections/text.liquid
+++ b/sections/text.liquid
@@ -64,7 +64,7 @@
 >
   <div class="text__container container">
     {%- if title != blank -%}
-      <h2 class="text__title">{{- title -}}</h2>
+      <h2 class="text__title h4">{{- title -}}</h2>
     {%- endif -%}
 
     {%- if text != blank -%}
