--- a/snippets/sidebar.liquid
+++ b/snippets/sidebar.liquid
@@ -35,7 +35,7 @@
     {%- if menu != blank -%}
       <div class="sidebar__menu" id="{{ item.id }}">
         {%- if heading != blank -%}
-          <h2 class="sidebar__heading"> {{- heading -}} </h2>
+          <h2 class="sidebar__heading h5"> {{- heading -}} </h2>
         {%- endif -%}
 
         <ul class="sidebar__menu-list">
