--- a/snippets/variables-cart-services.liquid
+++ b/snippets/variables-cart-services.liquid
@@ -3,7 +3,7 @@
     line-height: var(--line-height-sm);
     --service-checkbox-icon-color: var(--color-accent);
     --service-checkbox-color: transparent;
-    --service-checkbox-border-radius: var(--border-radius-rounded);
+    --service-checkbox-border-radius: var(--border-radius-checkbox);
     --service-checkbox-border: 1px solid var(--color-primary);
     --service-checkbox-color-checked: var(--background-accent);
     --service-checkbox-size: calc(var(--font-size-large) + 2px);
