--- a/assets/carousel.css
+++ b/assets/carousel.css
@@ -18,8 +18,8 @@
 }
 
 .carousel__wrapper {
-  margin: 0 calc(-1 * var(--horizontal-padding-mobile));
-  width: calc(100% + var(--horizontal-padding-mobile) * 2);
+  margin: 0 -16px;
+  width: calc(100% + 32px);
   height: 100%;
   overflow-x: scroll;
   overflow-y: hidden;
@@ -51,20 +51,12 @@
   scroll-snap-stop: always;
 }
 
-.carousel__item:first-child {
-  min-width: calc(var(--slide-width-mobile) + var(--horizontal-padding-mobile) - 16px);
-}
-
-.carousel__item:first-child .carousel__inner {
-  padding-left: var(--horizontal-padding-mobile);
-}
-
 .carousel__item:last-child {
-  min-width: calc(var(--slide-width-mobile) + var(--horizontal-padding-mobile));
+  min-width: calc(var(--slide-width-mobile) + 16px);
 }
 
 .carousel__item:last-child .carousel__inner {
-  padding-right: var(--horizontal-padding-mobile);
+  padding-right: 16px;
 }
 
 .carousel__pagination {
@@ -182,28 +174,16 @@
   }
 
   .carousel__wrapper {
-    margin: 0 calc(-1 * var(--horizontal-padding));
-    width: calc(100% + var(--horizontal-padding) * 2);
+    margin: 0 -16px;
+    width: calc(100% + 32px);
   }
 
   .carousel__item {
     min-width: var(--slide-width);
   }
 
-  .carousel__item:first-child {
-    min-width: calc(var(--slide-width) + var(--horizontal-padding) - 16px);
-  }
-
-  .carousel__item:first-child .carousel__inner {
-    padding-left: var(--horizontal-padding);
-  }
-
   .carousel__item:last-child {
-    min-width: calc(var(--slide-width) + var(--horizontal-padding));
-  }
-
-  .carousel__item:last-child .carousel__inner {
-    padding-right: var(--horizontal-padding);
+    min-width: calc(var(--slide-width) + 16px);
   }
 }
 
