--- a/layout/session.liquid
+++ b/layout/session.liquid
@@ -31,6 +31,10 @@
     <script src="{{ "touch-device-notch.js" | asset_url }}" defer></script>
     <script src="{{ "header.js" | asset_url }}" defer></script>
 
+    {%- if show_mini_cart -%}
+      {%- render 'variables-mini-cart' -%}
+    {%- endif -%}
+
     {{ content_for_body }}
 
   </body>
