--- a/sections/activate-account.liquid
+++ b/sections/activate-account.liquid
@@ -4,7 +4,6 @@
 {%- assign color_scheme          = section.settings.color_scheme -%}
 {%- assign description           = section.settings.description -%}
 {%- assign image                 = section.settings.image -%}
-{%- assign image_opacity         = section.settings.image_opacity -%}
 {%- assign padding_top           = section.settings.padding_top -%}
 {%- assign padding_bottom        = section.settings.padding_bottom -%}
 {%- assign padding_top_mobile    = section.settings.padding_top_mobile -%}
@@ -15,8 +14,6 @@
 
 {% comment %} CSS variables start {% endcomment %}
 {%- capture variables -%}
-  --image-opacity: {{- image_opacity | append: "%" -}};
-
   {%- case padding_top -%}
     {%- when 'small' -%}
       --padding-top: 40px;
@@ -129,16 +126,7 @@
       {
         "type": "image_picker",
         "id": "image",
-        "label": "Background image",
-        "default": "booqable://assets/image-curvilinear-lines.png"
-      },
-      {
-        "type": "number",
-        "id": "image_opacity",
-        "label": "Background overlay percentage",
-        "min": 0,
-        "max": 100,
-        "default": 10
+        "label": "Background image"
       },
       {
         "type": "select",
