--- a/sections/login-form.liquid
+++ b/sections/login-form.liquid
@@ -7,7 +7,6 @@
 {%- assign description           = section.settings.description -%}
 {%- assign email_label           = section.settings.email_label -%}
 {%- assign image                 = section.settings.image -%}
-{%- assign image_opacity         = section.settings.image_opacity -%}
 {%- assign password_label        = section.settings.password_label -%}
 {%- assign padding_top           = section.settings.padding_top -%}
 {%- assign padding_bottom        = section.settings.padding_bottom -%}
@@ -20,8 +19,6 @@
 
 {% comment %} CSS variables start {% endcomment %}
 {%- capture variables -%}
-  --image-opacity: {{- image_opacity | append: "%" -}};
-
   {%- case padding_top -%}
     {%- when 'small' -%}
       --padding-top: 40px;
@@ -223,16 +220,7 @@
       {
         "type": "image_picker",
         "id": "image",
-        "label": "Background image",
-        "default": "booqable://assets/image-curvilinear-lines.png"
-      },
-      {
-        "type": "number",
-        "id": "image_opacity",
-        "label": "Background overlay percentage",
-        "min": 0,
-        "max": 100,
-        "default": 10
+        "label": "Background image"
       },
       {
         "type": "select",
