--- a/sections/testimonials.liquid
+++ b/sections/testimonials.liquid
@@ -82,7 +82,7 @@
     <div class="testimonials__container container">
       {%- if title != blank or image_background != blank -%}
         <div class="testimonials__side{% if title == blank and image_background != blank %} testimonials__side--desktop-hidden{%- endif -%}">
-          <h2 class="testimonials__title">{{- title -}}</h2>
+          <h2 class="testimonials__title h4">{{- title -}}</h2>
 
           {%- if image_background != blank -%}
             <div class="testimonials__bg-image-wrapper">
@@ -103,12 +103,12 @@
       {%- endif -%}
 
             {%- for block in blocks -%}
-              {%- assign image       = block.settings.image -%}
-              {%- assign description = block.settings.description -%}
-              {%- assign name        = block.settings.name -%}
-              {%- assign position    = block.settings.position -%}
-              {%- assign button      = block.settings.button -%}
-              {%- assign button_url  = block.settings.button_url -%}
+              {%- assign image                = block.settings.image -%}
+              {%- assign description          = block.settings.description -%}
+              {%- assign name                 = block.settings.name -%}
+              {%- assign position             = block.settings.position -%}
+              {%- assign button_outline_label = block.settings.button_outline_label -%}
+              {%- assign button_outline_url   = block.settings.button_outline_url -%}
 
               {%- if carousel -%}
                 <div class="carousel__item">
@@ -148,7 +148,12 @@
                           {%- endif -%}
                         </blockquote>
 
-                        <a class="testimonials__button button button--outlined button--large" href="{{ button_url }}">{{- button -}}</a>
+                        {%- if button_outline_label != blank and button_outline_url != blank -%}
+                          <a class="testimonials__button button button--outlined button--large" href="{{ button_outline_url }}">
+                            {{- button_outline_label -}}
+                          </a>
+                        {%- endif -%}
+
                       </div>
                     {%- endif -%}
               {%- if carousel -%}
@@ -372,14 +377,14 @@
           },
           {
             "type": "text",
-            "id": "button",
+            "id": "button_outline_label",
             "label": "Button label",
             "default": "Check review online",
             "info": "Leave blank to hide the button"
           },
           {
             "type": "url",
-            "id": "button_url",
+            "id": "button_outline_url",
             "label": "Button link"
           }
         ]
