--- a/snippets/root-styles.liquid
+++ b/snippets/root-styles.liquid
@@ -45,15 +45,18 @@
     {% if settings.corner_radius == 'square' %}
       --border-radius: 0;
       --border-radius-circle-dynamic: 50%;
-      --border-radius-rounded: 0px;
+      --border-radius-rounded: 0;
+      --border-radius-checkbox: 0;
     {% elsif settings.corner_radius == 'rounded' %}
       --border-radius: 4px;
       --border-radius-circle-dynamic: 16px;
       --border-radius-rounded: 4px;
+      --border-radius-checkbox: 4px;
     {% elsif settings.corner_radius == 'fully_round' %}
       --border-radius: 50px;
       --border-radius-circle-dynamic: 50%;
       --border-radius-rounded: 8px;
+      --border-radius-checkbox: 4px;
     {% endif %}
 
     {% case settings.social_size %}
