--- a/sections/call-to-action.liquid
+++ b/sections/call-to-action.liquid
@@ -187,8 +187,7 @@
       {
         "type": "image_picker",
         "id": "image",
-        "label": "Image",
-        "default": "booqable://assets/image-cta-2.jpeg"
+        "label": "Image"
       },
       {
         "type": "checkbox",
