--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -310,8 +310,7 @@
       {
         "type": "image_picker",
         "id": "image",
-        "label": "Image",
-        "default": "booqable://assets/image-hero.jpeg"
+        "label": "Image"
       },
       {
         "type": "image_picker",
