--- a/sections/products.liquid
+++ b/sections/products.liquid
@@ -253,8 +253,7 @@
       {
         "type": "image_picker",
         "id": "image",
-        "label": "Background image",
-        "default": "booqable://assets/image-hero.jpg"
+        "label": "Background image"
       },
       {
         "type": "select",
