--- a/assets/call-to-action.css
+++ b/assets/call-to-action.css
@@ -1,6 +1,5 @@
 .cta__wrapper {
   height: 100%;
-  min-height: var(--min-height);
   position: relative;
   display: flex;
   align-items: center;
@@ -74,6 +73,10 @@
 }
 
 @media (min-width: 992px) {
+  .cta__wrapper {
+    min-height: var(--min-height);
+  }
+
   .cta__wrapper--padding-top {
     padding-top: var(--padding-top, 0);
   }
