--- a/snippets/variables-mini-cart.liquid
+++ b/snippets/variables-mini-cart.liquid
@@ -12,8 +12,8 @@
     --minicart-image-width: 56px;
     --minicart-z-index: 9999;
     --minicart-font: var(--font-body, Source Sans Pro, sans-serif);
-    --minicart-font-size: 14px;
-    --minicart-font-weight-normal: 400;
-    --minicart-font-weight-bold: 600;
+    --minicart-font-size: calc(var(--font-size-regular) - 2px);
+    --minicart-font-weight-normal: var(--font-weight-regular);
+    --minicart-font-weight-bold: var(--font-weight-semibold);
   }
 {% endstyle %}
