--- a/sections/articles.liquid
+++ b/sections/articles.liquid
@@ -139,7 +139,7 @@
 
                     {%- if article_btn != blank and article_btn_url != blank -%}
                       <div class="articles__buttons">
-                        <a href="{{ article_btn_url }}" class="articles__button button button--primary button--large">
+                        <a href="{{ article_btn_url }}" class="articles__button button button--outlined button--large">
                           {{- article_btn -}}
                         </a>
                       </div>
