--- a/sections/accordion.liquid
+++ b/sections/accordion.liquid
@@ -116,7 +116,7 @@
       </ul>
     </div>
 
-    {%- if image != blank -%}
+    {%- if image.url != blank -%}
       <div class="accordion__image-wrapper">
         {%- render 'image',
           image: image,
