--- a/sections/collection-page.liquid
+++ b/sections/collection-page.liquid
@@ -143,7 +143,7 @@
 
             {%- if paginate.pages > 1 -%}
               <div class="collection-page__pagination{% if full_width %} container{%- endif -%}">
-                {%- render "pagination", paginate: paginate -%}
+                {%- render 'pagination', paginate: paginate -%}
               </div>
             {%- endif -%}
           {%- endpaginate -%}
