--- a/sections/list-collections.liquid
+++ b/sections/list-collections.liquid
@@ -133,7 +133,7 @@
             <div class="collections__container container">
           {%- endif -%}
             {%- if paginate.pages > 1 -%}
-              {%- render "pagination", paginate: paginate -%}
+              {%- render 'pagination', paginate: paginate -%}
             {%- endif -%}
           {%- if full_width -%}
             </div>
