--- a/sections/products.liquid
+++ b/sections/products.liquid
@@ -202,7 +202,7 @@
       {%- endif -%}
     </div>
 
-    {%- if image != blank -%}
+    {%- if image.url != blank -%}
       <div class="products__background-wrapper">
         {%- render 'image',
           image: image,
