--- a/snippets/pagination.liquid
+++ b/snippets/pagination.liquid
@@ -4,7 +4,7 @@
 
   Usage:
 
-  {%- render "pagination", paginate: paginate -%}
+  {%- render 'pagination', paginate: paginate -%}
 
 {% endcomment %}
 
