--- a/snippets/payments.liquid
+++ b/snippets/payments.liquid
@@ -59,13 +59,13 @@
       {%- when "alipay" -%}
         <i class="fa-brands fa-alipay" title="Alipay"></i>
       {%- when "p24" -%}
-        {%- render "icon-p24" -%}
+        {%- render 'icon-p24' -%}
       {%- when "eps" -%}
-        {%- render "icon-eps" -%}
+        {%- render 'icon-eps' -%}
       {%- when "bancontact" -%}
-        {%- render "icon-bancontact" -%}
+        {%- render 'icon-bancontact' -%}
       {%- when "giropay" -%}
-        {%- render "icon-giropay" -%}
+        {%- render 'icon-giropay' -%}
     {%- endcase -%}
   {%- endfor -%}
 </div>
