--- a/sections/contact-form.liquid
+++ b/sections/contact-form.liquid
@@ -69,7 +69,7 @@
 <div class="contact-form__wrapper form-{{ section.key }} color-{{ color_scheme.id }}{% if padding_top != blank or padding_top_mobile != blank %} contact-form__wrapper--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} contact-form__wrapper--padding-bottom{%- endif -%}" style="{{- variables | escape -}}">
   <div class="contact-form__container container">
     <div class="contact-form__form">
-      {%- render "form",
+      {%- render 'form',
           id: section.key,
           title: title,
           description: description,
