--- a/snippets/variables-mini-cart.liquid
+++ b/snippets/variables-mini-cart.liquid
@@ -4,8 +4,8 @@
     --minicart-background-color: var(--background-primary);
     --minicart-typo-color: var(--color-primary);
     --minicart-header-color: var(--color-accent);
-    --minicart-warning-color: #f75454;
-    --minicart-warning-background-color: #f7545422;
+    --minicart-warning-color: var(--color-red);
+    --minicart-warning-background-color: var(--color-red-light);
     --minicart-border-radius: var(--border-radius-rounded);
     --minicart-border-color: var(--color-border);
     --minicart-padding: 16px;
